added toggle to australia

--- a/templates/australia.html
+++ b/templates/australia.html
@@ -71,27 +71,7 @@
             font-size: xx-small;}
     </style>
 </div>
-
-<blockquote>
-
-</blockquote>
-<blockquote>
-
-</blockquote>
-<blockquote>
-
-</blockquote>
-
 <div id="section2" class="container-fluid">
-    <blockquote>
-
-    </blockquote>
-    <blockquote>
-
-    </blockquote>
-    <blockquote>
-
-    </blockquote>
     <h1>Notable Locations</h1>
     What are some notable locations in Australia? Well, given that there are so many countries, here is a brief rundown.
     <h3><p class="text-left">Zanzibar, known for its beautiful beaches, is a fantastic place to visit in
@@ -101,6 +81,27 @@
         even see it from outer space. It is perfect to explore for those that love to dive and snorkel
         Blue Mountains National Park: It is a hiker's paradise and it is the most popular day trip to go on
         from Sydney. It has over 664,000 acres of wilderness
+
+        <blockquote><blockquote>
+        <body>
+
+        <img id="myImage" onclick="changeImage()" src="/static/assets/saumyaimages/mountains.png"" width="100" height="180">
+
+
+        <script>
+            function changeImage() {
+                var image = document.getElementById('myImage');
+                if (image.src.match("/static/assets/saumyaimages/mountains.png")) {
+                    image.src = "/static/assets/saumyaimages/beach.png";
+                } else {
+                    image.src = "/static/assets/saumyaimages/mountains.png";
+                }
+            }
+        </script>
+
+        </body>
+</html>
+<blockquote>
         Bondi Beach: It is only 15 minutes by car and is one of the world's most famous beaches. It hosts one
         of the oldest surf life saving clubs in the world.
         Daintree National Park: It is known for its' green beauty. It has natural features and they hold great
