--- a/templates/southamerica.html
+++ b/templates/southamerica.html
@@ -15,7 +15,7 @@
         body {
             position: relative;
         }
-        #section1 {padding-top:50px;height:800px;color: #fff; background-color: cornflowerblue; background-image: url("https://wallpaperaccess.com/full/236207.jpg");
+        #section1 {padding-top:50px;height:800px;color: #fff; background-color: cornflowerblue; background-image: url("https://mocah.org/uploads/posts/774516-Andes-Patagonia-Chile-South-America-Mountains-Rivers.jpg");
         }
 
         h1 {
@@ -66,6 +66,7 @@
     <blockquote></blockquote>
     <h1>Welcome to South America!</h1>
 
+
     <style>
         body {
         h1 {
@@ -98,7 +99,7 @@
     <h1>Notable Locations</h1>
     What are some notable locations in South America? Here is a brief rundown.
     <h3><p class="text-left">
- Firstly, we can start out with Brazil, which is an extremely hot tourist destination for people to visit   </h3></p>
+ Firstly, we can start out with Brazil, which is an extremely hot tourist destination for people to visit, especially in the summer. Rio De Janiero has a famous Christ the Redeemer Statue, which millions of people flock to each year. Additionally, the beaches in Brazil are famous for water activities and there is a giant party held on New Years Eve every year on Copacabana beach. It is also popular to go to Argentina and Chile for soccer matches and watching the world cup. Another infamous destination is Machu Picchu in Peru, which is known for its gorgeous scenery and llamas roaming widely. There is a large hike up the mountains to get to the ancient civilization and there are tour groups leading into the ruins.   </h3></p>
     <head>
         <style>
             .gfg {
@@ -116,9 +117,9 @@
 
     <body>
     <div class="gfg">
-        <img src="https://images.unsplash.com/photo-1547619292-b592f993106f?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8ZWlmZmVsJTIwdG93ZXIlMkMlMjBwYXJpcyUyQyUyMGZyYW5jZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80" width="300" height="300">
+        <img src="https://i.guim.co.uk/img/media/b56952349419f749667d43f38b4d05e2980821a2/0_176_6016_3611/master/6016.jpg?width=1200&height=900&quality=85&auto=format&fit=crop&s=d1d59c0c9b0e70e1da5989902cf5f01c" width="300" height="300">
         <h3 class="first-txt">
-            Eiffel Tower
+            Machu Picchu
         </h3>
     </div>
     </body>
@@ -138,9 +139,9 @@
 
     <body>
     <div class="gfg">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/de/Colosseo_2020.jpg/1200px-Colosseo_2020.jpg" width="300" height="300">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/e/e7/Aerial_view_of_the_Statue_of_Christ_the_Redeemer.jpg" width="300" height="300">
         <h3 class="first-txt">
-            Colosseum
+            Christ The Redeemer
         </h3>
     </div>
     </body>
@@ -182,31 +183,31 @@
 
             <body>
             <div class="gfg">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRn30EX-OjbmWS5lLqCdBAsoP9XuRUA7GxzpQ&usqp=CAU" width="300" height="300">
+                <img src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2021/03/10/0/FN_Larisa-Alvarez-Instant-Pot-Pork-Empanadas-2_s4x3.jpg.rend.hgtvcom.616.462.suffix/1615413894689.jpeg" width="300" height="300">
                 <h3 class="first-txt">
-                    Pasta Carbonara
+                    Empanadas
                 </h3>
             </div>
             </body>
-            <a href="https://insanelygoodrecipes.com/european-recipes/" >
+            <a href="https://www.taste.com.au/recipes/collections/south-american-recipes" >
                 <div class="vertical-center">
-                    <button>25 Traditional European Recipes</button>
+                    <button>South American Recipes</button>
                 </div>
-                <a href="https://www.walksofitaly.com/blog/food-and-wine/the-16-most-iconic-foods-to-eat-in-italy" >
+                <a href="https://www.oliviascuisine.com/authentic-brazilian-recipes/" >
                     <div class="vertical-center">
-                        <button>The 16 Most Iconic Dishes to Eat in Italy</button>
+                        <button>30 Authentic Brazilian Recipes</button>
                     </div>
-                    <a href="https://www.oliverstravels.com/blog/top-5-restaurants-in-south-of-france/" >
+                    <a href="https://www.cookinglight.com/food/world-cuisine/popular-south-american-dishes" >
                         <div class="vertical-center">
-                            <button>Top 5 Restaurants in the South of France</button>
+                            <button>Popular South American Recipes</button>
                         </div>
-                        <a href="https://mygerman.recipes/" >
+                        <a href="https://www.thespruceeats.com/ecuadorian-food-recipes-3029259" >
                             <div class="vertical-center">
-                                <button> Cook Like a German</button>
+                                <button> A Collection of Ecuadorian Recipes</button>
                             </div>
-                            <a href="https://www.thespruceeats.com/european-food-4162598" >
+                            <a href="http://worldwideadventurers.com/food-in-south-america/" >
                                 <div class="vertical-center">
-                                    <button>European Food & Recipes</button>
+                                    <button>Traditional Food Of South America</button>
                                 </div>
                                 <div>
 
@@ -249,7 +250,7 @@
                                             <button>                  </button>
                                         </div>
                                         <h1>Accommodations</h1>
-                                        <h3>Below are some great websites to research for living accommodations across the European continent!</h3>
+                                        <h3>Below are some great websites to research for living accommodations across the South American continent!</h3>
                                         <head>
                                             <style>
                                                 .gfg {
@@ -267,33 +268,33 @@
 
                                         <body>
                                         <div class="gfg">
-                                            <img src="https://afar-production.imgix.net/uploads/images/afar_post_headers/images/Mn6MVdRSM1/original_MACR1402.jpg?auto=compress,format&fit=crop&crop=top&lossless=true&w=1600&h=700" width="300" height="300">
+                                            <img src="https://imgcy.trivago.com/c_limit,d_dummy.jpeg,f_auto,h_1300,q_auto,w_2000/itemimages/95/79/95794_v6.jpeg" width="300" height="300">
                                             <h3 class="first-txt">
-                                                European Hotel
+                                                South American Hotel
                                             </h3>
                                         </div>
                                         </body>
 
                                         <blockquote></blockquote>
-                                        <a href="https://travel.usnews.com/Hotels/Europe/" >
+                                        <a href="https://www.telegraph.co.uk/travel/destinations/south-america/hotels/" >
                                             <div class="vertical-center">
-                                                <button>Best Hotels of Europe</button>
+                                                <button>Best Hotels of South America</button>
                                             </div>
-                                            <a href="https://www.jetsetter.com/magazine/oceanfront-hotels-in-europe/" >
+                                            <a href="https://theluxurytravelexpert.com/2018/03/19/top-10-best-hotels-south-america/" >
                                                 <div class="vertical-center">
-                                                    <button>11 Most Stunning Waterfront Hotels In Europe</button>
+                                                    <button>Top 10 best luxury hotels in South America</button>
                                                 </div>
-                                                <a href="https://about-france.com/tourism/hostels.htm" >
+                                                <a href="https://www.booking.com/country/br.html" >
                                                     <div class="vertical-center">
-                                                        <button>Hostel Accomodation In France</button>
+                                                        <button>Hotels in Brazil</button>
                                                     </div>
-                                                    <a href="https://theluxurytravelexpert.com/2018/02/26/top-10-best-luxury-hotels-germany/" >
+                                                    <a href="https://southamericabackpacker.com/hostels-south-america/" >
                                                         <div class="vertical-center">
-                                                            <button>Top 10: Best Luxury In Germany</button>
+                                                            <button>The Best Hostels & Guesthouses in South America!</button>
                                                         </div>
-                                                        <a href="https://www.hostelworld.com/hostels/europe" >
+                                                        <a href="http://www.budgetplaces.com/chile-cl/" >
                                                             <div class="vertical-center">
-                                                                <button>Hostels in Europe</button>
+                                                                <button>Cheap Hotels in Chile</button>
                                                             </div>
 
                                 </div>
@@ -307,7 +308,7 @@
 
                                             </blockquote>
                                             <h1>Read More:</h1>
-                                            <h3>Want to learn moore about European heritage and history? Go to many historical sites.</h3>
+                                            <h3>Want to learn more about South American heritage and history? Go to many historical sites.</h3>
                                             <head>
                                                 <style>
                                                     .gfg {
@@ -325,27 +326,27 @@
 
                                             <body>
                                             <div class="gfg">
-                                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRnI6Hspb0XRb5ZvvJ-CHJzsY0AmSeDaUR3kg&usqp=CAU" width="300" height="300">
+                                                <img src="https://3m4r5618el913vtfz3jffby9-wpengine.netdna-ssl.com/wp-content/uploads/South-america-landmarks-1-1024x683.jpg" width="300" height="300">
                                                 <h3 class="first-txt">
-                                                    Parthenon, Greece
+                                                    Iguazu Falls
                                                 </h3>
                                             </div>
                                             </body>
-                                            <a href="https://www.airtransat.com/experiencetransat/8-historical-sites-in-europe-so-significant-you-cant-miss-them/" >
+                                            <a href="https://www.nicolelabarge.com/famous-landmarks-in-south-america/" >
                                                 <div class="vertical-center">
-                                                    <button>7 Historical Sites In Europe So Significant You Can't Miss Them</button>
+                                                    <button>Famous Landmarks in South America</button>
                                                 </div>
-                                                <a href="https://www.thoughtco.com/summary-of-italian-history-1221657" >
+                                                <a href="https://www.britannica.com/place/Latin-America" >
                                                     <div class="vertical-center">
-                                                        <button>A Brief Look at Italy's History of Division</button>
+                                                        <button>History of Latin America</button>
                                                     </div>
-                                                    <a href="https://www.destguides.com/en/itineraries/most-famous-landmarks-in-europe" >
+                                                    <a href="https://www.thediscoveriesof.com/famous-landmarks-in-brazil/" >
                                                         <div class="vertical-center">
-                                                            <button>46 Most Famous Landmarks In Europe You Must Visit</button>
+                                                            <button>21 Iconic Landmarks in Brazil That Will Blow Your Mind</button>
                                                         </div>
-                                                        <a href="https://www.getours.com/expert-travel-advice/sightseeing/the-best-museums-in-europe" >
+                                                        <a href="https://www.adventurealternative.com/destinations/argentina/argentina-information/culture/" >
                                                             <div class="vertical-center">
-                                                                <button>The Best Museums In Europe</button>
+                                                                <button>Culture of Argentina</button>
                                                             </div>
                                         </div>
 
