--- a/templates/australia.html
+++ b/templates/australia.html
@@ -74,10 +74,10 @@
 <div id="section2" class="container-fluid">
     <h1>Notable Locations</h1>
     What are some notable locations in Australia? Well, given that there are so many countries, here is a brief rundown.
-    <h3><p class="text-left">Zanzibar, known for its beautiful beaches, is a fantastic place to visit in
+    <h3><p class="text-left">
         Sydney Opera House: It is a building that is shaped like huge shells and is surrounded by water. It
         is an architectural icon and it is also bordered by the Royal Botanic Gardens
-        Great Varrier Reef: It is one of the largest living structures on the planet. It is so big you can
+        Great Barrier Reef: It is one of the largest living structures on the planet. It is so big you can
         even see it from outer space. It is perfect to explore for those that love to dive and snorkel
         Blue Mountains National Park: It is a hiker's paradise and it is the most popular day trip to go on
         from Sydney. It has over 664,000 acres of wilderness
