--- a/templates/maps.html
+++ b/templates/maps.html
@@ -14,57 +14,50 @@
 <body style="background-color: red">
 <div class="col-0" style="margin: 3% 5% 2%" name="imgbox" id="imgbox;>
     <iframe width="1920" height="1080">
-</iframe><br />
-<table class="table">
-    <thead>
-    <tr>
-        <div class="content_img">
-            <img src="../static/valorant/maps/ascent.png" width='100%' height='100%' style="margin: 0% 0% 0%">
-            <div>Ascent</div>
+<div class="table">
+    <div class="row" style="margin:auto">
+        <div class="col">
+             <div class="content_img">
+                 <img src="../static/valorant/maps/ascent.png" width='120%' height='100%' style="margin: 0% 0% 0%">
+                 <div>Ascent</div>
+             </div>
+         </div>
+        <div class="col">
+             <div class="content_img">
+                 <img src="../static/valorant/maps/bind.png" width='120%' height='100%' style="margin: 0% 0% 0%">
+                 <div>Bind</div>
+             </div>
         </div>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <div class="content_img">
-            <img src="../static/valorant/maps/bind.png" width='100%' height='100%' style="margin: 0% 0% 0%">
-            <div>Bind</div>
+        <div class="col">
+            <div class="content_img">
+                <img src="../static/valorant/maps/breeze.png" width='120%' height='100%' style="margin: 0% 0% 0%">
+                <div>Breeze</div>
+            </div>
         </div>
-    </tr>
-    <tr>
-        <div class="content_img">
-            <img src="../static/valorant/maps/breeze.png" width='100%' height='100%' style="margin: 0% 0% 0%">
-            <div>Breeze</div>
+        <div class="col">
+            <div class="content_img">
+                <img src="../static/valorant/maps/fracture.png" width='120%' height='100%' style="margin: 0% 0% 0%">
+                <div>Fracture</div>
+            </div>
         </div>
-    </tr>
-    <tr>
-        <div class="content_img">
-            <img src="../static/valorant/maps/fracture.png" width='100%' height='100%' style="margin: 0% 0% 0%">
-            <div>Fracture</div>
+        <div class="col">
+            <div class="content_img">
+                <img src="../static/valorant/maps/haven.png" width='120%' height='100%' style="margin: 0% 0% 0%">
+                <div>Haven</div>
+            </div>
         </div>
-    </tr>
-    <tr>
+    </div>
+    <div class="row" style="margin: 2% 1% 0%">
         <div class="content_img">
-            <img src="../static/valorant/maps/haven.png" width='100%' height='100%' style="margin: 0% 0% 0%">
-            <div>Haven</div>
-        </div>
-    </tr>
-    <br>
-    <br>
-    <tr>
-        <div class="content_img">
-            <img src="../static/valorant/maps/icebox.png" width='100%' height='100%' style="margin: 0% 0% 0%">
+            <img src="../static/valorant/maps/icebox.png" width='120%' height='100%' style="margin: 0% 0% 0%">
             <div>Icebox</div>
         </div>
-    </tr>
-    <tr>
         <div class="content_img">
-            <img src="../static/valorant/maps/split.png" width='100%' height='100%' style="margin: 0% 0% 0%">
+            <img src="../static/valorant/maps/split.png" width='120%' height='100%' style="margin: 0% 25% 0%">
             <div>Split</div>
         </div>
-    </tr>
-    </tbody>
-</table>
+    </div>
+</div>
 <style>/* Parent Container */
 .content_img{
     position: relative;
