--- a/templates/controllers.html
+++ b/templates/controllers.html
@@ -46,11 +46,11 @@
 </table>
 <style>/* Parent Container */
 .content_img{
-  position: relative);
-  width: 200px;
-  height: 200px;
+  position: static;
+  width: 14%;
+  height: 20%;
   float: left;
-  margin-right: 10px;
+  margin-right: 11%;
 }
 
 /* Child Text Container */
