Background Color Fix

--- a/templates/Binary2.html
+++ b/templates/Binary2.html
@@ -17,14 +17,14 @@
       -moz-animation: fadein 2s; /* Firefox */
       -webkit-animation: fadein 2s; /* Safari and Chrome */
       -o-animation: fadein 2s; /* Opera */
-      background-color: deepskyblue;
+      background-color: black;
       color: black;
       font-family: "Comic Sans MS", sans-serif;
     }
 
     .dark-mode {
       background-color: black;
-      color: white;
+      color: red;
     }
 
     h1{
@@ -32,8 +32,8 @@
       color:white;
     }
     .button {
-      background-color: pink;
-      border: hotpink;
+      background-color: red;
+      border: darkred;
       color: white;
       padding: 15px 32px;
       text-align: center;
