--- a/templates/logicgates.html
+++ b/templates/logicgates.html
@@ -8,7 +8,7 @@
 {% block body %}
 <style>
     html, body{
-        background-color: deepskyblue;
+        background-color: black;
     }
     h1 {
         font-family: "Bebas Neue";
