Finished KDR calculator

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -34,6 +34,7 @@
                     <a class="dropdown-item" href="/sentinels">Sentinels</a>
                     <a class="dropdown-item" href="/initiators">Initiators</a>
                     <a class="dropdown-item" href="/maps">Maps</a>
+                    <a class="dropdown-item" href="/kdr">KDR Calculator</a>
                 </div>
             </li>
         </ul>
