--- a/templates/europe.html
+++ b/templates/europe.html
@@ -1,6 +1,25 @@
 
 <!DOCTYPE html>
 
+<html>
+<body>
+
+<h2>JavaScript Variables</h2>
+
+<p>Create a variable, assign a value to it, and display it:</p>
+
+<p id="demo"></p>
+<p id="demo1"></p>
+
+<script>
+    var Continent = "Europe", number = "1/7";
+    document.getElementById("demo").innerHTML = Continent;
+    document.getElementById("demo1").innerHTML = number;
+</script>
+
+</body>
+</html>
+
 
 
 <html xmlns="http://www.w3.org/1999/html">
@@ -75,6 +94,7 @@
     </style>
 </div>
 
+
 <blockquote>
 
 </blockquote>
@@ -121,7 +141,11 @@
             Eiffel Tower
         </h3>
     </div>
+
     </body>
+
+
+
 
     <style>
         .gfg {
