--- a/templates/val.html
+++ b/templates/val.html
@@ -11,15 +11,15 @@
 {% block body %}
 <a style="margin-left:40%; margin-right:0%; font-size:250%">VALORANT CLIPS</a>
 <hr style="color:red; border-color:red">
-<div class="container" style="margin-left: 0%; margin-right: 0%; margin-top: 0%; margin-bottom: 0%">
-    <div class="table" style="margin-top:2%;margin-left:10% ;margin-right:10% ; border-color:white; border-top: 1px solid #ffffff;border-bottom:1px solid #ffffff;border-left: 1px solid #ffffff; border-right: 1px solid #ffffff; color: red">
+<div class="container" style="margin-left:10% ;margin-right:10% ; margin-top: 0%; margin-bottom: 0%">
+    <div class="table" style="margin: 0% 0% 0%; border-color:white; border-top: 1px solid #ffffff;border-bottom:1px solid #ffffff;border-left: 1px solid #ffffff; border-right: 1px solid #ffffff; color: red">
         <tr style="color:red">Latest Valorant Patch Notes:</tr>
         <br>
         <a href="https://playvalorant.com/en-us/news/game-updates/valorant-patch-notes-3-07/" style="color:white">https://playvalorant.com/en-us/news/game-updates/valorant-patch-notes-3-07/</a>
     </div>
 </div>
-<div class="container" style="margin-left: 0%; margin-right: 0%; margin-top: 0%; margin-bottom: 0%">
-    <div class="row" style="margin: 2% 5% 3%" width="40%";>
+<div class="container" style="; margin-top: 0%; margin-bottom: 0%">
+    <div class="row" style="margin: 2% 5% 3%; border-color:white; border-top: 1px solid #ffffff;border-bottom:1px solid #ffffff;border-left: 1px solid #ffffff; border-right: 1px solid #ffffff" width="40%";>
         <div class="col" style="margin:auto">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/c4UMkZb_6D0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
@@ -34,7 +34,7 @@
             <a style="color:white; font-size: 75%">A clip of Valorant pro player, dapr, getting knifed during a tournament match against Cloud 9 Blue.</a>
         </div>
     </div>
-    <div class="row" style="margin: 2% 5% 0%">
+    <div class="row" style="margin: 0% 0% 0%">
         <script>
             const BITS = '{{ BITS }}'; // number of BITS (or Bulbs) displayed on screen
             let max = '{{ MAX }}'; let MAX = parseInt(max, 10);  // MAX integer value of bits
@@ -53,7 +53,7 @@
             <input type="submit" value="Like">
         </form>
     </div>
-    <div class="row" style="margin: 0% 5% 3%; width:125%">
+    <div class="row" style="margin: 0% -6% 0%; width:125%">
             {% for i in range(BITS) %}
             <img class="img-responsive py-3" id="bulb{{i}}" src="{{ likeButton }}" alt="" width="100" height="Auto">
             {% endfor %}
