--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -35,6 +35,7 @@
                     <a class="dropdown-item" href="/initiators">Initiators</a>
                     <a class="dropdown-item" href="/maps">Maps</a>
                     <a class="dropdown-item" href="/kdr">KDR Calculator</a>
+                    <a class="dropdown-item" href="/weapons">Weapons</a>
                 </div>
             </li>
         </ul>
