--- a/templates/flightapi.html
+++ b/templates/flightapi.html
@@ -40,6 +40,12 @@
         <!-- Sequence -->
         <div class="col-12" style="text-align: left; ">
             <table style="margin: 2%">
+                <tr>
+                    <th>City</th>
+                    <th>Airports</th>
+            {#                        <th>Country Code</th>#}
+            <div class="col-12" style="text-align: left; ">
+            <table style="margin: 2%">
                 {% for location in places %}
 
                 <tr>
