--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -19,6 +19,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <a class="nav-link" href={{ url_for('covid') }}>Covid</a>
             <a class="nav-link" href={{ url_for('flightapi') }}>flightapi</a>
             <a class="nav-link" href={{ url_for('flightdata') }}>flightdata</a>
+            <a class="nav-link" href={{ url_for('accommodationsapi') }}>accommodationsapi</a>
             <a class="nav-link" href={{ url_for('insights') }}>Insights</a>
             <a class="nav-link" href={{ url_for('sevenwonders') }}>7 Wonders of the World</a>
             <a class="nav-link" href="/stub">Stub</a>
