--- a/templates/southamerica.html
+++ b/templates/southamerica.html
@@ -12,7 +12,7 @@
 <p id="demo1"></p>
 
 <script>
-    var Continent = "Europe", number = "1/7";
+    var Continent = "South America", number = "4/7";
     document.getElementById("demo").innerHTML = Continent;
     document.getElementById("demo1").innerHTML = number;
 </script>
