--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -149,7 +149,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 {% block background %}
 <style>
     body {
-        background-color: black;
+        background-color: slategray;
     }
 </style>
 <script>
