--- a/templates/duelists.html
+++ b/templates/duelists.html
@@ -8,7 +8,7 @@
 <html lang="en">
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
-    <body style="background-color: red">
+    <body style="background-color: lightcoral">
     <div class="col-0" style="margin: 3% 5% 2%" name="imgbox" id="imgbox;>
     <iframe width="1920" height="1080">
     </iframe><br />
