--- a/templates/maps.html
+++ b/templates/maps.html
@@ -11,7 +11,7 @@
     <title>Sentinels</title>
 </head>
 {% block body %}
-<body style="background-color: red">
+<body style="background-color: lightcoral">
 <div class="col-0" style="margin: 3% 5% 2%" name="imgbox" id="imgbox;>
     <iframe width="1920" height="1080">
 <div class="table">
