--- a/templates/antarctica.html
+++ b/templates/antarctica.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
+
+
 {% extends "layouts/base.html" %}
 
-
-{#% set BITS = 8 %#}
 
 {% set imgBulbOff = "/static/assets/]" %}
 {% set msgTurnOn = "Turn On" %}
@@ -35,6 +35,8 @@
             #section5 {padding-top:50px;height:800px;color: #fff; background-color: #E6E6FA;}
 
         </style>
+
+
     </head>
     <body data-spy="scroll" data-target=".navbar" data-offset="50">
 
@@ -148,223 +150,7 @@
     </div>
 
     </body>
-    </html>
-
-    <script>
-        const BITS = '{{ BITS }}'; let max = '{{ MAX }}'; let MAX = parseInt(max, 10);
-        // return string with current value of each bit
-        function getBits() {
-            let bits = "";
-            for(let i = 0; i < BITS; i++) {
-                bits = bits + document.getElementById('digit' + i).value;
-            }
-            return bits;
-        }
-        // setter for DOM values
-        function setConversions(binary) {
-            document.getElementById('binary').innerHTML = binary;
-            // DOM assignment to Octal conversion
-            document.getElementById('octal').innerHTML = parseInt(binary, 2).toString(8);
-            // DOM assignment to Hexadecimal conversion
-            document.getElementById('hexadecimal').innerHTML = parseInt(binary, 2).toString(16);
-            // DOM assignment to Decimal conversion
-            document.getElementById('decimal').innerHTML = parseInt(binary, 2).toString(10);
-            /* Hack: show ASCII printable character(s) for each 8 bits
-             DOM assignment by converting decimal https://www.w3schools.com/jsref/jsref_fromcharcode.asplook
-             below ASCII for more ideas of where to make changes
-             */
-            document.getElementById('unicode').innerHTML = String.fromCharCode(parseInt(binary, 2))
-        }
-        // algorithm to convert decimal to base using division and remainder
-        function decimal_2_base(decimal, base) {
-            let conversion = "";
-            // loop to convert to base
-            do {
-                let digit = decimal % base;
-                conversion = "" + digit + conversion; // what does this do?
-                decimal = ~~(decimal / base);         // what does this do?  what is ~~?
-            } while (decimal > 0);                  // why while at the end?
-            // loop to pad with zeros
-            if (base === 2) {                        // only pad for binary conversions
-                for (let i = 0; conversion.length < BITS; i++) {
-                    conversion = "0" + conversion;
-                }
-            }
-            return conversion;
-        }
-        function changeBit(number, bitPosition, bitValue) {
-            console.log(number);
-            console.log(bitPosition);
-            console.log(bitValue);
-
-            const clearMask = ~(1 << bitPosition);
-            return (number & clearMask) | (bitValue << bitPosition);
-        }
-        function changecolor() {
-            const valueCtrlRed = document.getElementById('val-' + 0);
-            const valueCtrlGreen = document.getElementById('val-' + 1);
-            const valueCtrlBlue = document.getElementById('val-' + 2);
-            const colorCtrl = document.getElementById('rgb');
-            const colorVal = document.getElementById('rgb-val');
-
-            let red = valueCtrlRed.innerHTML;
-            let green = valueCtrlGreen.innerHTML;
-            let blue = valueCtrlBlue.innerHTML;
-
-            let rgb = 'rgb(' + red + ',' + green + ',' + blue + ')';
-            console.log(rgb);
-            colorCtrl.style.background=rgb;
-            colorVal.innerHTML="#"
-                + ('0' + Number(red).toString(16)).slice(-2)
-                + ('0' + Number(green).toString(16)).slice(-2)
-                + ('0' + Number(blue).toString(16)).slice(-2);
-        }
-        function toggle1Bit(row, col) {
-            console.log('row: ' + row + ', col: ' + col);
-            const valueCtrl = document.getElementById('val-' + row);
-
-            const buttonCtrl = document.getElementById('butt-' + row + '-' + col);
-
-            let value = valueCtrl.innerHTML;
-            let bit = buttonCtrl.value;
-
-            console.log('bit before: ' + bit);
-            console.log('value before: ' + value);
-
-            // bitValue ? 1 : 0
-
-            if (bit == 0) {
-                bit = 1;
-            } else {
-                bit = 0;
-            }
-
-            console.log('bit after: ' + bit);
-
-            value = changeBit(value, col, bit)
-
-            console.log('Value: ' + value);
-            console.log('Bit:' + bit);
-            console.log('valueCtrl: ' + valueCtrl);
-            console.log('buttonCtrl: ' + buttonCtrl);
-
-            valueCtrl.innerHTML = value;
-            buttonCtrl.value = bit;
-            buttonCtrl.innerHTML = bit;
-            (bit ? buttonCtrl.style.background='#FFFFFF' : buttonCtrl.style.background='#000000');
-            (bit ? buttonCtrl.style.color='#000000' : buttonCtrl.style.color='#FFFFFF');
-            changecolor();
-        }
-        // toggle selected bit and recalculate
-        function toggleBit(i) {
-            //alert("Digit action: " + i );
-            const dig = document.getElementById('digit' + i);
-            const image = document.getElementById('bulb' + i);
-            const butt = document.getElementById('butt' + i);
-            // Change digit and visual
-            if (image.src.match("{{ imgBulbOn }}")) {
-                dig.value = 0;
-                image.src = "{{ imgBulbOff }}";
-                butt.innerHTML = "{{ msgTurnOn }}";
-            } else {
-                dig.value = 1;
-                image.src = "{{ imgBulbOn }}";
-                butt.innerHTML = "{{ msgTurnOff }}";
-            }
-            // Binary numbers
-            const binary = getBits();
-            setConversions(binary);
-        }
-        // add is positive integer, subtract is negative integer
-        function add(n) {
-            let binary = getBits();
-            // convert to decimal and do math
-            let decimal = parseInt(binary, 2);
-            if (n > 0) {  // PLUS
-                decimal = MAX === decimal ? 0 : decimal += n; // OVERFLOW or PLUS
-            } else  {     // MINUS
-                decimal = 0 === decimal ? MAX : decimal += n; // OVERFLOW or MINUS
-            }
-            // convert the result back to binary
-            binary = decimal_2_base(decimal, 2);
-            // update conversions
-            setConversions(binary);
-            // change bits
-            for (let i = 0; i < binary.length; i++) {
-                let digit = binary.substr(i, 1);
-                document.getElementById('digit' + i).value = digit;
-                if (digit === "1") {
-                    document.getElementById('bulb' + i).src = "{{ imgBulbOn }}";
-                    document.getElementById('butt' + i).innerHTML = "{{ msgTurnOff }}";
-                } else {
-                    document.getElementById('bulb' + i).src = "{{ imgBulbOff }}";
-                    document.getElementById('butt' + i).innerHTML = "{{ msgTurnOn }}";
-                }
-            }
-        }
-        function times(n) {
-            let binary = getBits();
-            // convert to decimal and do math
-            let decimal = parseInt(binary, 2);
-            if (n > 1) {  // PLUS
-                decimal = MAX === decimal ? 0 : decimal *= n; // OVERFLOW or PLUS
-            } else  {     // MINUS
-                decimal = 0 === decimal ? MAX : decimal *= n; // OVERFLOW or MINUS
-            }
-            // convert the result back to binary
-            binary = decimal_2_base(decimal, 2);
-            // update conversions
-            setConversions(binary);
-            // change bits
-            for (let i = 0; i < binary.length; i++) {
-                let digit = binary.substr(i, 1);
-                document.getElementById('digit' + i).value = digit;
-                if (digit === "1") {
-                    document.getElementById('bulb' + i).src = "{{ imgBulbOn }}";
-                    document.getElementById('butt' + i).innerHTML = "{{ msgTurnOff }}";
-                } else {
-                    document.getElementById('bulb' + i).src = "{{ imgBulbOff }}";
-                    document.getElementById('butt' + i).innerHTML = "{{ msgTurnOn }}";
-                }
-            }
-        }
-    </script>
-{% endblock %}
-{% block body %}
-    <h1 class="text-center">Color Codes</h1>
-    <div class="col-12">
-    </div>
-    </table>
-    </div>
-    <div class="col-12">
-        <div class="row">
-            <table class="table">
-                <div>
-                    {% for color in range(3) %}
-                        <tr>
-                            {% for i in range(7, -1, -1) %}
-                                <td style="width:100px">
-                                    <button style="width:100px; background-color: #E6E6FA; color: black;"
-                                            type="button" value="0"
-                                            id="butt-{{color}}-{{i}}"
-                                            onclick="toggle1Bit('{{ color }}', '{{i}}')">
-                                        0
-                                    </button>
-                                </td>
-                            {% endfor %}
-                            <td>blank</td>
-                            <td id="val-{{color}}" >0</td>
-                        </tr>
-                    {% endfor %}
-                </div>
-            </table>
-        </div>
-    </div>
-    <div class="col-12" id="rgb" style="height: 100px; background-color: rgb(0,0,0);"></div>
-    <div class="col-12">
-        <p id="rgb-val" class="text-center">#000000</p>
-    </div>
-
+    </html
 
 
 {% endblock %}
