--- a/templates/logicgates.html
+++ b/templates/logicgates.html
@@ -1,125 +1,37 @@
 <!DOCTYPE html>
-{% extends "layouts/base.html" %}
 
-{% block background %}
-{% endblock %}
-{% set project = "colors" %}
-
-{% block body %}
-    <title>Color Codes</title>
-    <html lang="en">
-
-    <head>
-        <meta charset="UTF-8">
-        <title>logic_gates</title>
-    </head>
-
-    <style>
-        table, th, td {
-            border: .5px solid black;
-        }
-    </style>
-
-    <body>
-
-    <h2>Logic Gate Lab</h2>
-
-    <input type="checkbox" id=a name="input" value=1>
-    <label for=a>a</label><br>
-    <input type="checkbox" id=b name="input" value=1>
-    <label for=b>b</label><br>
-    <button type="submit" id="results" onclick="output()">Submit</button>
-    <blockquote>
-
-    </blockquote>
-    </tr>
-
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Change the Background Color with JavaScript</title>
     <script>
-        function output() {
-            let input1 = document.getElementById("a").checked;
-            let input2 = document.getElementById("b").checked;
-            let andResult = input1 && input2;
-            let nandResult = !(input1 && input2);
-            let orResult = input1 || input2;
-            let norResult = !(input1 || input2);
-            let xorResult = input1 !== input2;
-
-            if (andResult) {
-                document.getElementById("andGate").innerHTML = andResult;
-            } else {
-                document.getElementById("andGate").innerHTML = andResult;
-            }
-            if (nandResult) {
-                document.getElementById("nandGate").innerHTML = nandResult;
-            } else {
-                document.getElementById("nandGate").innerHTML = nandResult;
-            }
-
-            if (orResult) {
-                document.getElementById("orGate").innerHTML = orResult;
-            } else {
-                document.getElementById("orGate").innerHTML = orResult;
-            }
-
-            if (norResult) {
-                document.getElementById("norGate").innerHTML = norResult;
-            } else {
-                document.getElementById("norGate").innerHTML = norResult;
-            }
-
-            if (xorResult) {
-                document.getElementById("xorGate").innerHTML = xorResult;
-            } else {
-                document.getElementById("xorGate").innerHTML = xorResult;
-            }
-
+        // Function to change webpage background color
+        function changeBodyBg(color){
+            document.body.style.background = color;
         }
 
+        // Function to change heading background color
+        function changeHeadingBg(color){
+            document.getElementById("heading").style.background = color;
+        }
     </script>
-    <tr>
-        <td><img src="/static/assets/gateimgs/andgate.jpg"/></td>
-        <td>And Gate</td>
-        <td id="andGate">  </td>
-    </tr>
-    <blockquote>
-
-    </blockquote>
-    <div>
-
-    </div>
-
-    <tr>
-        <td><img src="/static/assets/gateimgs/nandgate.jpg"/></td>
-        <td>Nand Gate</td>
-        <td id="nandGate"> </td>
-    </tr>
-    <blockquote>
-
-    </blockquote>
-    <tr>
-        <td><img src="/static/assets/gateimgs/orgate.jpg"/></td>
-        <td>Or Gate</td>
-        <td id="orGate">  </td>
-    </tr>
-<blockquote>
-
-</blockquote>
-    <tr>
-        <td><img src="/static/assets/gateimgs/norgate.jpg"/></td>
-        <td>Nor Gate</td>
-        <td id="norGate">  </td>
-    </tr>
-    <blockquote>
-
-    </blockquote>
-    <tr>
-        <td><img src="/static/assets/gateimgs/xoorgate.jpg"/></td>
-        <td>Xor Gate</td>
-        <td id="xorGate"> </td>
-
-    </tr>
-    </table>
-    </body>
-    </html>
-{% endblock %}
-
+</head>
+<body>
+<h1 id="heading">This is a heading</h1>
+<p>This is a paragraph of text.</p>
+<hr>
+<div>
+    <label>Change Webpage Background To:</label>
+    <button type="button" onclick="changeBodyBg('yellow');">Yellow</button>
+    <button type="button" onclick="changeBodyBg('lime');">Lime</button>
+    <button type="button" onclick="changeBodyBg('orange');">Orange</button>
+</div>
+<br>
+<div>
+    <label>Change Heading Background To:</label>
+    <button type="button" onclick="changeHeadingBg('red');">Red</button>
+    <button type="button" onclick="changeHeadingBg('green');">Green</button>
+    <button type="button" onclick="changeHeadingBg('blue');">Blue</button>
+</div>
+</body>
+</html>
