--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -36,6 +36,7 @@
                     <a class="dropdown-item" href="/maps">Maps</a>
                     <a class="dropdown-item" href="/kdr">KDR Calculator</a>
                     <a class="dropdown-item" href="/weapons">Weapons</a>
+                    <a class="dropdown-item" href="/slider">Slider</a>
                 </div>
             </li>
         </ul>
